# rain_radar

./: .gitignore  README.md
.github/workflows/: build-firmware.yml
firmware/: inky_helper.py  main.py  nasa_apod.py  rain_radar.py
firmware_c/: Dockerfile  README.md  docker-compose.yml
firmware_c/rain_radar_app/: CMakeLists.txt  battery.cpp  battery.hpp  data_fetching.cpp  data_fetching.hpp  http_client_util.cpp  http_client_util.hpp  lwipopts.h  main.cpp  main_test.cpp  mbedtls_config.h  my_example_http_client_util.cpp  network.h  network_utils.cpp  network_utils.hpp  persistent_data.hpp  pico.code-workspace  rain_radar_common.hpp  secrets_template.h  wifi_setup.cpp  wifi_setup.hpp
firmware_python/: README.md  rain_radar.py
server/: README.md  forecast_server.py  gen_image.py  main.py  pyproject.toml  requirements.txt  service.py
server/images/: image_info.txt
